--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div id="image-container">
-        <img src="https://app.passaggi-files.co.uk/auralhistories/background.png" alt="Image 1" class="layer-image active" id="image1">
+        <img src="https://github.com/zinkagain/auralhistories/blob/51b74cbe9f13c32b09bbf0164adaaa9d50b2905e/background-01.png" alt="Image 1" class="layer-image active" id="image1">
         <img src="https://app.passaggi-files.co.uk/auralhistories/prerefprocessions.png" alt="Image 2" class="layer-image" id="image2">
         <img src="https://app.passaggi-files.co.uk/auralhistories/wards.png" alt="Image 3" class="layer-image" id="image3">
     </div>
