--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     </div>
 
     <div id="image-container">
-        <img src="https://github.com/zinkagain/auralhistories/blob/51b74cbe9f13c32b09bbf0164adaaa9d50b2905e/background-01.png" alt="Image 1" class="layer-image active" id="image1">
-        <img src="https://github.com/zinkagain/auralhistories/blob/de80605042747acc1190e9b26a554fe97f391f05/pre_ref-01.png" alt="Image 2" class="layer-image" id="image2">
-        <img src="https://github.com/zinkagain/auralhistories/blob/be5f83c5f2ce8a72f88ae05e8a813b1f3bcd0cf0/cc_processions-01.png" alt="Image 3" class="layer-image" id="image3">
+        <img src="https://app.passaggi-files.co.uk/auralhistories/background-01.png" alt="Image 1" class="layer-image active" id="image1">
+        <img src="https://app.passaggi-files.co.uk/auralhistories/pre_ref-01.png" alt="Image 2" class="layer-image" id="image2">
+        <img src="https://app.passaggi-files.co.uk/auralhistories/cc_processions-01.png" alt="Image 3" class="layer-image" id="image3">
     </div>
 
     <script>
