--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 </head>
 <body>
     <div id="button-container">
-        <button id="toggle-image2">Medieval Buildings</button>
-        <button id="toggle-image3">Administrative Wards</button>
+        <button id="toggle-image2">Medieval Features</button>
+        <button id="toggle-image3">Corpus Christi Procession</button>
     </div>
 
     <div id="image-container">
