--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.5">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapping Early Modern Coventry</title>
     <style>
         body {
@@ -15,6 +15,7 @@
         }
 
         #image-container {
+            width: 400px;
             position: absolute;
             top: 25;
             left: 0;
