--- a/index.html
+++ b/index.html
@@ -1,75 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapping Early Modern Coventry</title>
     <style>
         body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 25vh;
-            margin: 0;
-            background-color: #ffffff;
+            font-family: Arial, sans-serif;
         }
-
-        #image-container {
-            width: 400px;
+        #imageContainer {
+            width: 600px;
+            height: 600px;
+            overflow: hidden;
+            position: relative;
+        }
+        #layeredImage {
             position: absolute;
-            top: 25;
-            left: 0;
+            width: 100%;
+            height: 100%;
+            transform-origin: 0 0;
+            transition: transform 0.3s ease-in-out;
         }
-
-        .layer-image {
-            position: absolute;
-            top: 0;
-            left: 0;
-            opacity: 0;
-            transition: opacity 0.3s ease-in-out;
+        .layerButton {
+            display: inline-block;
+            margin: 5px;
+            padding: 8px 16px;
+            background-color: #4CAF50;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            font-size: 14px;
         }
-
-        .layer-image.active {
-            opacity: 1;
+        .layerButton.active {
+            background-color: #007bff;
         }
-
-        #button-container {
-            position: absolute;
-            top: 10px;
-            left: 10px;
+        #zoomControls {
+            margin-top: 10px;
         }
-
-        button {
-            margin-right: 10px;
+        .zoomButton {
+            padding: 5px 10px;
+            margin: 2px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <div id="button-container">
-        <button id="toggle-image2">Medieval Features</button>
-        <button id="toggle-image3">Corpus Christi Procession</button>
+    <h1>Mapping Early Modern Coventry</h1>
+    <div>
+        <button class="layerButton active" onclick="toggleLayer(2)">Medieval Features</button>
+        <button class="layerButton active" onclick="toggleLayer(3)">Corpus Christi Processions</button>
     </div>
-
-    <div id="image-container">
-        <img src="https://app.passaggi-files.co.uk/auralhistories/background-01.png" alt="Image 1" class="layer-image active" id="image1">
-        <img src="https://app.passaggi-files.co.uk/auralhistories/pre_ref-01.png" alt="Image 2" class="layer-image" id="image2">
-        <img src="https://app.passaggi-files.co.uk/auralhistories/cc_processions-01.png" alt="Image 3" class="layer-image" id="image3">
+    <div id="zoomControls">
+        <button class="zoomButton" onclick="zoomIn()">Zoom In</button>
+        <button class="zoomButton" onclick="zoomOut()">Zoom Out</button>
+    </div>
+    <div id="imageContainer">
+        <div id="layeredImage">
+            <img src="https://app.passaggi-files.co.uk/auralhistories/background-01.png" alt="Image 1" id="image1">
+            <img src="https://app.passaggi-files.co.uk/auralhistories/cc_processions-01.png" alt="Image 2" id="image2">
+            <img src="https://app.passaggi-files.co.uk/auralhistories/pre_ref-01.png" alt="Image 3" id="image3">
+        </div>
     </div>
 
     <script>
-        const toggleImage2Btn = document.getElementById('toggle-image2');
-        const toggleImage3Btn = document.getElementById('toggle-image3');
-        const image2 = document.getElementById('image2');
-        const image3 = document.getElementById('image3');
+        let scale = 1;
 
-        toggleImage2Btn.addEventListener('click', () => {
-            image2.classList.toggle('active');
-        });
+        function toggleLayer(layerNumber) {
+            const image = document.getElementById('image' + layerNumber);
+            image.style.display = image.style.display === 'none' ? 'inline' : 'none';
+        }
 
-        toggleImage3Btn.addEventListener('click', () => {
-            image3.classList.toggle('active');
-        });
+        function zoomIn() {
+            scale += 0.1;
+            updateZoom();
+        }
+
+        function zoomOut() {
+            scale -= 0.1;
+            updateZoom();
+        }
+
+        function updateZoom() {
+            const layeredImage = document.getElementById('layeredImage');
+            layeredImage.style.transform = `scale(${scale})`;
+        }
     </script>
 </body>
 </html>
-
