--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     }
     .viewer-container {
       max-width: 1200px;
-      max-height:600px;
+      max-height: 600px;
       position: relative;
       margin: 0 auto;
+      overflow: auto;
     }
     .viewer-container img {
       width: 100%;
