--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       position: relative;
       margin: 0 auto;
       overflow: auto;
+      border: 2px solid black;
     }
     .viewer-container img {
       width: 100%;
