--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       max-height: 600px;
       position: relative;
       margin: 0 auto;
-      overflow: auto;
-      border: 2px solid black;
+      border: 2px solid black
     }
     .viewer-container img {
       width: 100%;
