--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     .toggle-buttons {
       position: absolute;
       top: 10px;
-      left: 10px;
-      z-index: 1;
+      left: 20px;
+      display: flex;
+      flex-direction: column;
+    }
+    .toggle-buttons button {
+     margin-bottom: 5px;
     }
     .zoom-buttons {
       position: absolute;
