--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 <body>
   <div class="viewer-title">Mapping Early Modern Coventry</div>
   <div class="viewer-container">
-    <img id="image1" src="https://app.passaggi-files.co.uk/auralhistories/background-01.png" alt="Image 1">
-    <img id="image2" src="https://app.passaggi-files.co.uk/auralhistories/pre_ref-01.png" alt="Image 2" style="display:none;">
-    <img id="image3" src="https://app.passaggi-files.co.uk/auralhistories/cc_processions-01.png" alt="Image 3" style="display:none;">
+    <img id="image1" src="background-01.png" alt="Image 1">
+    <img id="image2" src="pre_ref-01.png" alt="Image 2" style="display:none;">
+    <img id="image3" src="cc_processions-01.png" alt="Image 3" style="display:none;">
     <div class="toggle-buttons">
       <button onclick="toggleLayer('image2')">Toggle Image 2</button>
       <button onclick="toggleLayer('image3')">Toggle Image 3</button>
